--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.10.5",
     "@strapi/strapi": "4.10.5",
     "mysql": "2.18.1",
+    "strapi-plugin-menus": "^1.4.1",
     "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
