--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^2.51.6",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
+    "lodash": "^4.17.21",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
