--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_DEV_ADMIN_PANEL_URL=http://127.0.0.1:1337
-NEXT_PUBLIC_PROD_ADMIN_PANEL_URL=https://admin.missafir.com
+API_URL_DEV=http://127.0.0.1:1337
+API_URL_PROD=
