--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ JWT_SECRET=tobemodified
 DATABASE_CLIENT=mysql
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=3306
-DATABASE_NAME=
+DATABASE_NAME=missafir_db
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_SSL=false
