--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/lodash": "^4.14.194",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
@@ -23,6 +24,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.3",
     "swiper": "^9.3.2",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
