--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/lodash": "^4.14.194",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
+    "@types/react-datepicker": "^4.11.2",
+    "@types/react-dates": "^21.8.3",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -20,12 +22,15 @@
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-datepicker": "^4.14.1",
+    "react-dates": "^21.8.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
-    "swiper": "^9.3.2",
+    "swiper": "^9.4.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
