--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-API_URL_DEV=http://127.0.0.1:1337
-API_URL_PROD=
+NEXT_PUBLIC_API_URL_DEV=http://127.0.0.1:1337
+NEXT_PUBLIC_API_URL_PROD=
 API_KEY=
