--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "daisyui": "^3.1.5",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
