--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.14.1",
     "react-dates": "^21.8.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
     "swiper": "^9.4.1",
