--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ JWT_SECRET=xRoBXLmFWtAc4HFryIaxgA==
 
 # Database
 DATABASE_CLIENT=mysql
-DATABASE_HOST=missafir-dev-mysql-db.cxwfvsk8htcb.eu-central-1.rds.amazonaws.com
-DATABASE_PORT=3306
-DATABASE_NAME=strapi
-DATABASE_USERNAME=admin
-DATABASE_PASSWORD=hzMoc!q!EphUXoRa9FFxnwJaugm
+DATABASE_HOST=testmmmm-do-user-14369817-0.b.db.ondigitalocean.com
+DATABASE_PORT=25060
+DATABASE_NAME=defaultdb
+DATABASE_USERNAME=doadmin
+DATABASE_PASSWORD=AVNS_Ei8ulIetbbbPoopDNPK
 DATABASE_SSL=false
 
 FRONT_END_URL=http://localhost:3000
