updated env file v.2

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=https://missafirv3-strapi.vercel.app
+HOST=0.0.0.0
 PORT=1337
 APP_KEYS=lLK30sxaytKn0lVSu1Mtqw==,QPK+m3ddvHy4OSOkJQdtCQ==,YPwyp27a34Yrg/KmMh1VIg==,7GcozKyoZ9Uh2Sa3IhXWyw==
 API_TOKEN_SALT=N/ctt8tJznIKTwTCZmozUQ==
