--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=0.0.0.0
+HOST=https://missafirw3-strapi.netlify.app/
 PORT=1337
 APP_KEYS=lLK30sxaytKn0lVSu1Mtqw==,QPK+m3ddvHy4OSOkJQdtCQ==,YPwyp27a34Yrg/KmMh1VIg==,7GcozKyoZ9Uh2Sa3IhXWyw==
 API_TOKEN_SALT=N/ctt8tJznIKTwTCZmozUQ==
