--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DATABASE_PASSWORD=AVNS_Ei8ulIetbbbPoopDNPK
 DATABASE_SSL=false
 
 FRONT_END_URL=http://localhost:3000
-NETLIFY_DEPLOYMENTS_PLUGIN_ACCESS_TOKEN=https://api.netlify.com/build_hooks/64af1197a2be4823ab320e3d
+NETLIFY_DEPLOYMENTS_PLUGIN_ACCESS_TOKEN=U6nzXJy5aKBO_h9Kvf97NpDiKJhcrb9l028ZKF_H3F4
 NETLIFY_DEPLOYMENTS_PLUGIN_SITES_NAME=missafirw3-strapi
 NETLIFY_DEPLOYMENTS_PLUGIN_SITES_ID=abb3c91e-2ebf-4da9-805a-cbf761b632d5
-NETLIFY_DEPLOYMENTS_PLUGIN_SITES_BUILD_HOOK=https://api.netlify.com/build_hooks/
+NETLIFY_DEPLOYMENTS_PLUGIN_SITES_BUILD_HOOK=https://api.netlify.com/build_hooks/64af1197a2be4823ab320e3d
