--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "uuid": "4c788fbb-2419-4541-8529-7cc47768f7a4"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": "16.20.1",
     "npm": ">=6.0.0"
   }
 }
