--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dates": "^21.8.3",
     "@types/react-dom": "18.2.4",
+    "@types/react-tabs": "^5.0.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
