--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "plop": "plop"
   },
   "dependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@tanstack/react-query": "^4.32.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "20.2.3",
     "@types/react": "18.2.8",
@@ -26,6 +28,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.3",
+    "plop": "^3.1.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-datepicker": "^4.14.1",
