--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-select": "^5.7.3",
     "swiper": "^9.4.1",
     "tailwindcss": "^3.3.2",
