--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "multi-range-slider-react": "^2.0.3",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
