--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "react-detect-click-outside": "^1.1.7",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-fast-marquee": "^1.6.0",
     "react-outside-click-handler": "^1.3.0",
     "react-select": "^5.7.3",
+    "react-swipeable-list": "^1.8.1",
     "swiper": "^9.4.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
