--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "plop": "plop"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^8.0.1",
     "@tanstack/react-query": "^4.32.0",
     "@types/lodash": "^4.14.194",
@@ -37,6 +38,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-redux": "^8.1.1",
     "react-select": "^5.7.3",
     "swiper": "^9.4.1",
     "tailwindcss": "^3.3.2",
