--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "plop": "plop"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^8.0.1",
-    "@tanstack/react-query": "^4.32.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "20.2.3",
     "@types/react": "18.2.8",
@@ -28,6 +28,7 @@
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "negotiator": "^0.6.3",
     "next": "13.4.3",
     "plop": "^3.1.2",
     "postcss": "8.4.23",
