--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.29.4",
     "negotiator": "^0.6.3",
     "next": "13.4.3",
+    "next-intl": "3.0.0-beta.9",
     "plop": "^3.1.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
