--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "negotiator": "^0.6.3",
-    "next": "13.4.3",
+    "next": "^13.4.13",
     "next-intl": "3.0.0-beta.9",
     "plop": "^3.1.2",
     "postcss": "8.4.23",
