--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-NEXT_PUBLIC_API_URL_DEV=http://127.0.0.1:1337
-NEXT_PUBLIC_API_URL_PROD=
+NEXT_PUBLIC_API_DEV=http://127.0.0.1:1337
+NEXT_PUBLIC_API_PROD=https://coral-app-kpt9s.ondigitalocean.app
+NEXT_PUBLIC_PMS_API_DEV=https://mmapi-dev.missafir.com/api/dbe
+NEXT_PUBLIC_PMS_API_PROD=https://mmapi.missafir.com/api/dbe
+
