--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-fast-marquee": "^1.6.0",
+    "react-hot-toast": "^2.4.1",
     "react-outside-click-handler": "^1.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.1",
