--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "formik": "^2.4.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "multi-range-slider-react": "^2.0.3",
     "negotiator": "^0.6.3",
     "next": "^13.4.15",
     "next-auth": "^4.23.0",
     "next-intl": "3.0.0-beta.9",
     "plop": "^3.1.2",
-    "multi-range-slider-react": "^2.0.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-credit-cards-2": "^1.0.1",
     "react-datepicker": "^4.14.1",
     "react-dates": "^21.8.0",
     "react-detect-click-outside": "^1.1.7",
