add eslintrc config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "jest": true
   },
   "extends": [
+    "next/babel",
     "next/core-web-vitals",
     "eslint:recommended",
     "plugin:react/recommended",
