--- a/package.json
+++ b/package.json
@@ -10,60 +10,60 @@
     "plop": "plop"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.4.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@svgr/webpack": "^8.0.1",
-    "@types/lodash": "^4.14.194",
+    "@formatjs/intl-localematcher": "0.4.0",
+    "@reduxjs/toolkit": "1.9.5",
+    "@svgr/webpack": "8.0.1",
+    "@types/lodash": "4.14.194",
     "@types/node": "20.2.3",
     "@types/react": "18.2.8",
-    "@types/react-datepicker": "^4.11.2",
-    "@types/react-dates": "^21.8.3",
+    "@types/react-datepicker": "4.11.2",
+    "@types/react-dates": "21.8.3",
     "@types/react-dom": "18.2.4",
-    "@types/react-tabs": "^5.0.5",
+    "@types/react-tabs": "5.0.5",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "daisyui": "^3.1.5",
-    "eslint": "^8.41.0",
+    "axios": "1.4.0",
+    "classnames": "2.3.2",
+    "daisyui": "3.1.5",
+    "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
-    "formik": "^2.4.3",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "multi-range-slider-react": "^2.0.3",
-    "negotiator": "^0.6.3",
-    "next": "^13.4.15",
-    "next-auth": "^4.23.0",
+    "formik": "2.4.3",
+    "lodash": "4.17.21",
+    "moment": "2.29.4",
+    "multi-range-slider-react": "2.0.3",
+    "negotiator": "0.6.3",
+    "next": "13.4.15",
+    "next-auth": "^4.23.1",
     "next-intl": "3.0.0-beta.9",
-    "plop": "^3.1.2",
+    "plop": "3.1.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
-    "react-credit-cards-2": "^1.0.1",
-    "react-datepicker": "^4.14.1",
-    "react-dates": "^21.8.0",
-    "react-detect-click-outside": "^1.1.7",
-    "react-device-detect": "^2.2.3",
+    "react-credit-cards-2": "1.0.1",
+    "react-datepicker": "4.14.1",
+    "react-dates": "21.8.0",
+    "react-detect-click-outside": "1.1.7",
+    "react-device-detect": "2.2.3",
     "react-dom": "18.2.0",
-    "react-draggable": "^4.4.5",
-    "react-fast-marquee": "^1.6.0",
-    "react-imask": "^7.1.3",
-    "react-number-format": "^5.2.2",
-    "react-hot-toast": "^2.4.1",
-    "react-outside-click-handler": "^1.3.0",
-    "react-phone-input-2": "^2.15.1",
-    "react-redux": "^8.1.1",
-    "react-select": "^5.7.3",
-    "react-swipeable-list": "^1.8.1",
-    "swiper": "^9.4.1",
-    "tailwindcss": "^3.3.2",
+    "react-draggable": "4.4.5",
+    "react-fast-marquee": "1.6.0",
+    "react-hot-toast": "2.4.1",
+    "react-imask": "7.1.3",
+    "react-number-format": "5.2.2",
+    "react-outside-click-handler": "1.3.0",
+    "react-phone-input-2": "2.15.1",
+    "react-redux": "8.1.1",
+    "react-select": "5.7.3",
+    "react-swipeable-list": "1.8.1",
+    "swiper": "9.4.1",
+    "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "yup": "^1.2.0"
+    "yup": "1.2.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.8.8"
   }
 }
