--- a/.env
+++ b/.env
@@ -6,17 +6,32 @@ ADMIN_JWT_SECRET=EsAHvhLOWM6YAI79AA+DkQ==
 TRANSFER_TOKEN_SALT=l/4eT3z+48zgcjjZ3DqDNw==
 JWT_SECRET=xRoBXLmFWtAc4HFryIaxgA==
 
-# Database
-DATABASE_CLIENT=mysql
-DATABASE_HOST=testmmmm-do-user-14369817-0.b.db.ondigitalocean.com
-DATABASE_PORT=25060
-DATABASE_NAME=defaultdb
-DATABASE_USERNAME=doadmin
-DATABASE_PASSWORD=AVNS_Ei8ulIetbbbPoopDNPK
+DATABASE_HOST=missafir-staging-strapi-db.cxwfvsk8htcb.eu-central-1.rds.amazonaws.com
+DATABASE_PORT=5432
+DATABASE_NAME=missafir-staging-strapi-db
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=Ea#8yVUI3053Avu&
+DATABASE_CLIENT=postgres
 DATABASE_SSL=false
 
+# DATABASE_HOST=missafir-prod-strapi-db.cwvniziz0zps.eu-central-1.rds.amazonaws.com
+# DATABASE_PORT=5432
+# DATABASE_NAME=strapi-prod
+# DATABASE_USERNAME=postgres
+# DATABASE_PASSWORD=9Z6*<t7f74+i
+# DATABASE_CLIENT=postgres
+# DATABASE_SSL=false
+
+# DATABASE_HOST=localhost
+# DATABASE_PORT=5432
+# DATABASE_NAME=strapi
+# DATABASE_USERNAME=strapi
+# DATABASE_PASSWORD=strapi
+# DATABASE_CLIENT=postgres
+# DATABASE_SSL=false
+
+# yarn strapi export --file missafirv3-dev-209
+# yarn strapi export --exclude files,content 
+# yarn strapi export --only content  
+# yarn strapi import -f missafirv3-dev-2209.tar.gz.enc
 FRONT_END_URL=http://localhost:1337/admin
-NETLIFY_DEPLOYMENTS_PLUGIN_ACCESS_TOKEN=U6nzXJy5aKBO_h9Kvf97NpDiKJhcrb9l028ZKF_H3F4
-NETLIFY_DEPLOYMENTS_PLUGIN_SITES_NAME=missafirw3-strapi
-NETLIFY_DEPLOYMENTS_PLUGIN_SITES_ID=abb3c91e-2ebf-4da9-805a-cbf761b632d5
-NETLIFY_DEPLOYMENTS_PLUGIN_SITES_BUILD_HOOK=https://api.netlify.com/build_hooks/64af1197a2be4823ab320e3d
